Avoid 1px gap at top of wrapper

--- a/src/assets/sass/modules/_layout.scss
+++ b/src/assets/sass/modules/_layout.scss
@@ -35,6 +35,7 @@ body {
  */
 
 .wrapper {
+    margin-top: -1px;
     padding: 1px 0 1em;
     border-bottom: 2px solid var(--color-border);
     background: var(--color-background);
